# kiwi

./: .coverage  .pre-commit-config.yaml  .secrets.baseline  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  ci.yaml  codecov.yaml  deps-upgrade.yaml  pre-commit.yaml  release-badge.yaml
examples/: hello_world.kiwi
examples/basic/: fibonacci_recursive.kiwi  hello_world.kiwi  math.kiwi
examples/patterns/for/: for_loop_finally_statement.kiwi  for_loop_statement.kiwi
examples/patterns/if/: if_elif_else_statement.kiwi  if_elif_statement.kiwi  if_else_statement.kiwi  if_statement.kiwi
examples/patterns/variable/: typed_constant.kiwi  typed_variable.kiwi  untyped_constant.kiwi  untyped_variable.kiwi
examples/patterns/while/: while_loop_finally_statement.kiwi  while_loop_statement.kiwi
grammar/: math.lark  prototype.lark
src/kiwi/: __init__.py  __main__.py
src/kiwi/ast/: __init__.py  operations.py
src/kiwi/cli/: __init__.py
src/kiwi/lexer/: __init__.py  errors.py  lexer.py  tokens.py  utils.py
src/kiwi/parser/: __init__.py
src/lexer/: errors.py  tokens.py
tests/: conftest.py
tests/examples/: COMMENT_MULTI_LINE.kiwi
tests/integration/: test_lexer.py
