[project]
name = "kiwi"
version = "0.1.0"
description = "The kiwi programming language compiler."
readme = "README.md"
authors = [
  { name = "Gozner Robert-Ioan", email = "gozner.robertioan@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "llvmlite>=0.46.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "typer>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "syrupy>=5.0.0",
    "ty>=0.0.5",
    "uv>=0.9.18",
]

[project.scripts]
kiwi = "kiwi:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

line-length = 88
indent-width = 4


target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true

docstring-code-line-length = "dynamic"


[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--cov=src/mylang --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
