[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.17,<0.10" ]

[project]
name = "kiwi"
version = "0.1.0"
description = "The kiwi programming language compiler."
readme = "README.md"
authors = [
  { name = "Gozner Robert-Ioan", email = "gozner.robertioan@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "lark>=1.3.1",
  "llvmlite>=0.46",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "typer>=0.20.1",
]

scripts.kiwi = "kiwi:main"

[dependency-groups]
dev = [
  "bandit>=1.9.2",
  "detect-secrets>=1.5",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocstrings>=1",
  "pre-commit>=4.5.1",
  "pyinstaller>=6.17",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "ruff>=0.14.10",
  "syrupy>=5",
  "ty>=0.0.5",
  "uv>=0.9.18",
]

[tool.ruff]
target-version = "py313"

line-length = 88
indent-width = 4

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = true

lint.select = [ "ALL" ]
lint.ignore = [ "COM812", "D203", "D212", "FBT001", "FBT002" ]
lint.per-file-ignores."tests/**" = [
  "ANN",     # allow missing/partial type annotations in tests
  "D",       # skip pydocstyle checks in tests (docstrings not required)
  "PLR2004", # allow magic values
  "S101",    # allow bare 'assert' in tests (used by pytest)
]

lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--cov=src/kiwi --cov-report=term-missing"
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]

[tool.ty.src]
include = [ "src/**", "tests/**" ]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
upload_to_pypi = false                              # set true when ready and add PYPI_TOKEN in repo secrets

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
